add_executable(kmp kmp.c)
add_executable(dijkastra dijkastra.c)
add_executable(floyd floyd.c)
add_executable(buffer buffer.c)
add_executable(poj-1001 poj-1001.c)
add_executable(poj-1002 poj-1002.cpp)
add_executable(poj-1002-2 poj-1002-2.c)
add_executable(poj-1003 poj-1003.c)
add_executable(poj-1004 poj-1004.c)
