add_executable(poj-1001 poj-1001.c)
add_executable(poj-1002 poj-1002.cpp)
add_executable(poj-1002-2 poj-1002-2.c)
add_executable(poj-1003 poj-1003.c)
add_executable(poj-1004 poj-1004.c)
add_executable(poj-1005 poj-1005.c)
add_executable(poj-1006 poj-1006.c)
add_executable(poj-1007 poj-1007.c)
add_executable(poj-1008 poj-1008.c)
add_executable(poj-1009 poj-1009.c)
